@@ -1,26 +1,19 @@
 package backend.model;
 
-public class Circle implements Figure {
+public class Circle extends Ellipse implements Figure {
 
-    protected final Point centerPoint;
-    protected final double radius;
 
     public Circle(Point centerPoint, double radius) {
-        this.centerPoint = centerPoint;
-        this.radius = radius;
+        super(centerPoint, 2 * radius, 2 * radius);
     }
 
     @Override
     public String toString() {
-        return String.format("Círculo [Centro: %s, Radio: %.2f]", centerPoint, radius);
-    }
-
-    public Point getCenterPoint() {
-        return centerPoint;
+        return "Círculo [Centro: %s , Radio: %.2f}]".formatted(this.getCenterPoint(), this.getsMayorAxis() / 2);
     }
 
     public double getRadius() {
-        return radius;
+        return this.getsMayorAxis() / 2;
     }
 
 }
